--- a/workflow-templates/cd-tf.yaml
+++ b/workflow-templates/cd-tf.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   # DEV
   dev-terraform-apply:
-    name: Terraform Apply
+    name: 'Terraform Apply'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: dev
@@ -16,7 +16,7 @@ jobs:
   # TST
   tst-terraform-apply:
     needs: dev-terraform-apply
-    name: Terraform Apply
+    name: 'Terraform Apply'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: tst
@@ -24,7 +24,7 @@ jobs:
   # PRD
   prd-terraform-apply:
     needs: tst-terraform-apply
-    name: Terraform Apply
+    name: 'Terraform Apply'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: prd
