--- a/workflow-templates/ci-docker.yaml
+++ b/workflow-templates/ci-docker.yaml
@@ -8,21 +8,21 @@ on:
       - $default-branch
 jobs:
   helm-lint:
-    name: Docker Lint
+    name: 'Docker Lint'
     uses: entur/gha-docker/.github/workflows/lint.yaml@main
   terraform-lint:
-    name: Terraform Lint
+    name: 'Terraform Lint'
     uses: entur/gha-terraform/.github/workflows/lint.yaml@main
   docker-lint:
-    name: Docker Lint
+    name: 'Docker Lint'
     uses: entur/gha-docker/.github/workflows/lint.yaml@main
   docker-build:
-    name: Docker Build
+    name: 'Docker Build'
     uses: entur/gha-docker/.github/workflows/build.yaml@main
     # with:
     #   dockerfile: Dockerfile
   terraform-plan:
-    name: Terraform Plan
+    name: 'Terraform Plan'
     uses: entur/gha-terraform/.github/workflows/plan.yaml@main
     strategy:
       matrix:
