--- a/workflow-templates/ci-gradle.yaml
+++ b/workflow-templates/ci-gradle.yaml
@@ -8,26 +8,26 @@ on:
       - $default-branch
 jobs:
   helm-lint:
-    name: Docker Lint
+    name: 'Docker Lint'
     uses: entur/gha-docker/.github/workflows/lint.yaml@main
   terraform-lint:
-    name: Terraform Lint
+    name: 'Terraform Lint'
     uses: entur/gha-terraform/.github/workflows/lint.yaml@main
   gradle-lint:
-    name: Gradle Lint
+    name: 'Gradle Lint'
     uses: entur/gha-gradle/.github/workflows/run.yaml@main
     with:
       run: lint
   docker-lint:
-    name: Docker Lint
+    name: 'Docker Lint'
     uses: entur/gha-docker/.github/workflows/lint.yaml@main
   gradle-test:
-    name: Gradle Build
+    name: 'Gradle Build'
     uses: entur/gha-gradle/.github/workflows/run.yaml@main
     with:
       run: 'test'
   terraform-plan:
-    name: Terraform Plan
+    name: 'Terraform Plan'
     uses: entur/gha-terraform/.github/workflows/plan.yaml@main
     strategy:
       matrix:
