--- a/workflow-templates/cd-both.yaml
+++ b/workflow-templates/cd-both.yaml
@@ -16,14 +16,14 @@ jobs:
   # DEV
   dev-terraform-apply:
     needs: docker-push
-    name: 'Terraform Apply'
+    name: 'Terraform Apply Dev'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: dev
     secrets: inherit
   dev-helm-deploy:
     needs: dev-terraform-apply
-    name: 'Docker Deploy'
+    name: 'Docker Deploy Dev'
     uses: entur/gha-helm/.github/workflows/deploy.yaml@main
     with:
       environment: dev
@@ -31,14 +31,14 @@ jobs:
   # TST
   tst-terraform-apply:
     needs: dev-helm-deploy
-    name: 'Terraform Apply'
+    name: 'Terraform Apply Tst'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: tst
     secrets: inherit
   tst-helm-deploy:
     needs: tst-terraform-apply
-    name: 'Docker Deploy'
+    name: 'Docker Deploy Tst'
     uses: entur/gha-helm/.github/workflows/deploy.yaml@main
     with:
       environment: tst
@@ -46,14 +46,14 @@ jobs:
   # PRD
   prd-terraform-apply:
     needs: tst-helm-deploy
-    name: 'Terraform Apply'
+    name: 'Terraform Apply Prd'
     uses: entur/gha-terraform/.github/workflows/apply.yaml@main
     with:
       environment: prd
     secrets: inherit
   prd-helm-deploy:
     needs: prd-terraform-apply
-    name: 'Docker Deploy'
+    name: 'Docker Deploy Prd'
     uses: entur/gha-helm/.github/workflows/deploy.yaml@main
     with:
       environment: prd
