--- a/workflow-templates/cd-both.yaml
+++ b/workflow-templates/cd-both.yaml
@@ -1,5 +1,5 @@
 # ╔═╗╔═╗╔╦╗╔═╗╦  ╔═╗       ╔╗╔╔═╗╔╦╗  ╦═╗╔═╗╔═╗╔╦╗╦ ╦  ╔═╗╔═╗╦═╗  ╦ ╦╔═╗╔═╗
-# ╚═╗╠═╣║║║╠═╝║  ║╣   ───  ║║║║ ║ ║   ╠╦╝║╣ ╠═╣ ║║╚╦╝  ╠╣ ║ ║╠╦╝  ║ ║╚═╗║╣ 
+# ╚═╗╠═╣║║║╠═╝║  ║╣   ───  ║║║║ ║ ║   ╠╦╝║╣ ╠═╣ ║║╚╦╝  ╠╣ ║ ║╠╦╝  ║ ║╚═╗║╣
 # ╚═╝╩ ╩╩ ╩╩  ╩═╝╚═╝       ╝╚╝╚═╝ ╩   ╩╚═╚═╝╩ ╩═╩╝ ╩   ╚  ╚═╝╩╚═  ╚═╝╚═╝╚═╝
 # TODO: This file comes from entur/.github/workflows/cd-both.yaml
 #       Adopt to your needs, this file is yours now.
@@ -8,53 +8,25 @@ on:
   push:
     branches:
       - $default-branch
+
 jobs:
+  docker-build:
+    uses: entur/gha-docker/.github/workflows/build.yml@v1
+
   docker-push:
-    name: 'Docker Push'
-    uses: entur/gha-docker/.github/workflows/push.yaml@main
-    secrets: inherit
-  # DEV
-  dev-terraform-apply:
-    needs: docker-push
-    name: 'Terraform Apply Dev'
-    uses: entur/gha-terraform/.github/workflows/apply.yaml@main
+    needs: docker-build
+    uses: entur/gha-docker/.github/workflows/push.yml@v1
     with:
       environment: dev
-    secrets: inherit
-  dev-helm-deploy:
-    needs: dev-terraform-apply
-    name: 'Docker Deploy Dev'
-    uses: entur/gha-helm/.github/workflows/deploy.yaml@main
+
+  terraform-apply:
+    uses: entur/gha-terraform/.github/workflows/force-apply.yml@v1
     with:
       environment: dev
-    secrets: inherit
-  # TST
-  tst-terraform-apply:
-    needs: dev-helm-deploy
-    name: 'Terraform Apply Tst'
-    uses: entur/gha-terraform/.github/workflows/apply.yaml@main
+
+  helm-deploy:
+    needs: [docker-push, terraform-apply]
+    uses: entur/gha-helm/.github/workflows/deploy.yml@v1
     with:
-      environment: tst
-    secrets: inherit
-  tst-helm-deploy:
-    needs: tst-terraform-apply
-    name: 'Docker Deploy Tst'
-    uses: entur/gha-helm/.github/workflows/deploy.yaml@main
-    with:
-      environment: tst
-    secrets: inherit
-  # PRD
-  prd-terraform-apply:
-    needs: tst-helm-deploy
-    name: 'Terraform Apply Prd'
-    uses: entur/gha-terraform/.github/workflows/apply.yaml@main
-    with:
-      environment: prd
-    secrets: inherit
-  prd-helm-deploy:
-    needs: prd-terraform-apply
-    name: 'Docker Deploy Prd'
-    uses: entur/gha-helm/.github/workflows/deploy.yaml@main
-    with:
-      environment: prd
-    secrets: inherit
+      image: ${{ needs.docker-push.outputs.image_name }}:${{ needs.docker-push.outputs.image_tag}}
+      environment: dev
