fix: workflow design

--- a/workflow-templates/codeql.yml
+++ b/workflow-templates/codeql.yml
@@ -1,18 +1,3 @@
-#  ____   _                            _
-# / ___| | |__    __ _  _ __  ___   __| |
-# \___ \ | '_ \  / _` || '__|/ _ \ / _` |
-#  ___) || | | || (_| || |  |  __/| (_| |
-# |____/ |_| |_| \__,_||_|   \___| \__,_|
-# __        __            _      __  _
-# \ \      / /___   _ __ | | __ / _|| |  ___ __      __ ___
-#  \ \ /\ / // _ \ | '__|| |/ /| |_ | | / _ \\ \ /\ / // __|
-#   \ V  V /| (_) || |   |   < |  _|| || (_) |\ V  V / \__ \
-#    \_/\_/  \___/ |_|   |_|\_\|_|  |_| \___/  \_/\_/  |___/
-#         ____            _         ___   _       ____
-# __/\__ / ___| ___    __| |  ___  / _ \ | |     / ___|   ___  __ _  _ __
-# \    /| |    / _ \  / _` | / _ \| | | || |     \___ \  / __|/ _` || '_ \
-# /_  _\| |___| (_) || (_| ||  __/| |_| || |___   ___) || (__| (_| || | | |
-#   \/   \____|\___/  \__,_| \___| \__\_\|_____| |____/  \___|\__,_||_| |_|
 #
 # Shared Workflows - CodeQL Scan
 #
@@ -25,7 +10,7 @@
 # TODO: This file comes from entur/.github/workflows/codeql.yml
 #       Adopt to your needs, this file is yours now.
 #
-name: "CodeQL Scan"
+name: CodeQL Scan
 
 on:
   pull_request:
