--- a/workflow-templates/docker-lint.yml
+++ b/workflow-templates/docker-lint.yml
@@ -1,18 +1,5 @@
-#  ____   _                            _
-# / ___| | |__    __ _  _ __  ___   __| |
-# \___ \ | '_ \  / _` || '__|/ _ \ / _` |
-#  ___) || | | || (_| || |  |  __/| (_| |
-# |____/ |_| |_| \__,_||_|   \___| \__,_|
-# __        __            _      __  _
-# \ \      / /___   _ __ | | __ / _|| |  ___ __      __ ___
-#  \ \ /\ / // _ \ | '__|| |/ /| |_ | | / _ \\ \ /\ / // __|
-#   \ V  V /| (_) || |   |   < |  _|| || (_) |\ V  V / \__ \
-#    \_/\_/  \___/ |_|   |_|\_\|_|  |_| \___/  \_/\_/  |___/
-#        ____                _                 _      _         _
-# __/\__|  _ \   ___    ___ | | __ ___  _ __  | |    (_) _ __  | |_
-# \    /| | | | / _ \  / __|| |/ // _ \| '__| | |    | || '_ \ | __|
-# /_  _\| |_| || (_) || (__ |   <|  __/| |    | |___ | || | | || |_
-#   \/  |____/  \___/  \___||_|\_\\___||_|    |_____||_||_| |_| \__|
+#
+# Shared Workflows - Docker Lint
 #
 # TODO: This file comes from entur/.github/workflows/docker-lint.yml
 #       Adopt to your needs, this file is yours now.
@@ -24,6 +11,7 @@
 #   * Slack: #Talk-plattform
 #
 name: Docker Lint
+
 on:
   push: # on push to any branch
      paths: # only run on changes to the following files
