fix: test with less chars

--- a/workflow-templates/gradle-build-sonar-scan.properties
+++ b/workflow-templates/gradle-build-sonar-scan.properties
@@ -1,6 +1,6 @@
 {
-  "name": "Gradle Build with SonarCloud Scan",
+  "name": "Gradle with SonarCloud Scan",
   "description": "Entur Gradle build with SonarCloud Scan Template",
-  "categories": ["Gradle","code-quality","testing","Java"],
+  "categories": ["code-quality"],
   "iconName": "octicon code-review"
 }
