--- a/workflow-templates/gradle-build-sonar-scan.yml
+++ b/workflow-templates/gradle-build-sonar-scan.yml
@@ -1,5 +1,5 @@
 #
-# Shared Workflows - CodeQL Scan
+# Shared Workflows - Gradle build with SonarCloud Scan
 #
 # Reusable Workflows used:
 # * Docker Lint
