fix: env in job, re-order code

--- a/workflow-templates/gradle-build-sonar-scan.properties
+++ b/workflow-templates/gradle-build-sonar-scan.properties
@@ -1,6 +1,6 @@
 {
-  "name": "Gradle with SonarCloud Scan",
+  "name": "Gradle build with SonarCloud scan",
   "description": "Entur Gradle build with SonarCloud Scan Template",
-  "categories": ["code-quality"],
+  "categories": ["Dockerfile","code-quality"],
   "iconName": "octicon code-review"
 }
