fix: make scan run before docker push

--- a/workflow-templates/docker-build-push.yaml
+++ b/workflow-templates/docker-build-push.yaml
@@ -44,13 +44,13 @@ jobs:
     uses: entur/gha-docker/.github/workflows/build.yml@v1
     with:
       dockerfile: Dockerfile
-  docker-push:
-    name: Push Docker Image
-    needs: docker-build
-    uses: entur/gha-docker/.github/workflows/push.yml@v1
   docker-scan:
     name: Scan Docker Image
     needs: docker-build
     uses: entur/gha-security/.github/workflows/docker-scan.yml@v2
     with:
       image_artifact: ${{ needs.docker-build.outputs.image_artifact }}
+  docker-push:
+    name: Push Docker Image
+    needs: docker-scan
+    uses: entur/gha-docker/.github/workflows/push.yml@v1
