feat: inherit secrets for Docker scan job

--- a/workflow-templates/docker-build-push.yaml
+++ b/workflow-templates/docker-build-push.yaml
@@ -52,5 +52,6 @@ jobs:
     name: Scan Docker Image
     needs: docker-build
     uses: entur/gha-security/.github/workflows/docker-scan.yml@v1
+    secrets: inherit
     with:
       image_artifact: ${{ needs.docker-build.outputs.image_artifact }}
