feat: inherit secrets for Docker scan job (#28)

--- a/workflow-templates/docker-build-push.yaml
+++ b/workflow-templates/docker-build-push.yaml
@@ -48,6 +48,7 @@ jobs:
     name: Scan Docker Image
     needs: docker-build
     uses: entur/gha-security/.github/workflows/docker-scan.yml@v2
+    secrets: inherit
     with:
       image_artifact: ${{ needs.docker-build.outputs.image_artifact }}
   docker-push:
