--- a/workflow-templates/pr.yml
+++ b/workflow-templates/pr.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Run Tests
         run: ./gradlew ${{ inputs.test-command }} test
         env:
-          ARTIFACTORY_AUTH_USER: ${{ secrets.ARTIFACTORY_USER }}
+          ARTIFACTORY_AUTH_USER: ${{ secrets.ARTIFACTORY_AUTH_USER }}
           ARTIFACTORY_AUTH_TOKEN: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
